--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>JAVASCRIPT TUTORIALS   </h1>
+        <h1>WebDev tutorials</h1>
         <p>ASYCHRONOUS PROGRAMMING WITH PROMISSES  && AJAX.</p>
         <p>Muhammad EL  Software developer.</p>
     </header>
